--- a/VRChat/52/1314252.html
+++ b/VRChat/52/1314252.html
@@ -106,7 +106,7 @@
     <script src=
     "https://asset.booth.pm/assets/d0b74dab23351869d989.js" defer=
     "defer" nonce=
-    "oc7mYm5NCMAp2XKBxQW8K9BYhJ+7+ZYGIYKUcqv6RV0="></script>
+    "9ydStcwsraPb77cl3BTtSEFpnfwdkLFZ9eRUXt1kj/4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"隊長困惑顔アクリルキーホルダー","description":"この商品はpixivFACTORYで作られた商品です。サンプル画像は完成イメージのため、実物と異なる場合があります。\n\nTwitterで好評連載中！VRChat体験記漫画の隊長のアクリルキーホルダーが遂に登場！（なぜなのか）第一弾は困惑顔！周囲に困惑するものを置いて隊長を困惑の渦に落とそう！\n\nVRChat体験記（漫画）↓\nhttps://twitter.com/rietzscha/status/1085751861376737280","url":"https://booth.pm/ja/items/1314252","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1090"},"image":"https://booth.pximg.net/c/620x620/5aa4ad1f-09ca-4316-86f9-8caea276a4ba/i/1314252/094740da-cccc-4061-9471-4d6f45df414d_base_resized.jpg"}
     </script>
@@ -117,7 +117,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="oc7mYm5NCMAp2XKBxQW8K9BYhJ+7+ZYGIYKUcqv6RV0="></script>
+    nonce="9ydStcwsraPb77cl3BTtSEFpnfwdkLFZ9eRUXt1kj/4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -373,7 +373,7 @@
                                     "legacy-list-item__content">
                                       <div class="u-d-sp-block">
                                         <span class=
-                                        "autolink u-text-wrap">2023-07-20</span>
+                                        "autolink u-text-wrap">2023/07/24</span>
                                       </div>
                                     </div>
                                   </div>
