--- a/VRChat/05/1265805.html
+++ b/VRChat/05/1265805.html
@@ -75,27 +75,49 @@
     <script id="shoplist_with_items" type="text/x-template">
     <div><div class="l-cards-4cols l-cards-sp-2cols"><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" v-for="shop in visibleShops"></shop-with-items><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" closed="" v-for="shop in moreShops" v-if="moreShops &amp;&amp; moreShopsVisible"></shop-with-items></div><div @click="moreShopsVisible = true" class="ellip-btn" v-if="moreShops &amp;&amp; !moreShopsVisible">もっと見る<i class="icon-arrow-open-down s-2x no-margin"></i></div></div>
     </script>
+  </head>
+  <body>
+    <div class="mini-player-controller" style="display: none;">
+      <a class="scroller" data-smooth-scroll="true"><img class=
+      "mini-player-controller__image" src=
+      "https://asset.booth.pm/assets/thumbnail_placeholder_c_300-09027647543d43ee525b2a7fe28d5ed5a3b6069d0c596c89b21776543ed1c0fe.png"></a><a class="scroller mini-player-information"
+      data-smooth-scroll="true">
+      <div class="mini-player-information__item-name"></div>
+      <div class="mini-player-information__shop-name"></div>
+      <div class="mini-player-information__navigation">
+        試聴中の商品へスクロール
+      </div></a>
+      <div class="mini-player-controls">
+        <div class="mini-player-mode-ui">
+          <div class="mini-player-mode-ui__knob"></div>
+          <div class="mini-player-mode-ui__short">
+            15秒
+          </div>
+          <div class="mini-player-mode-ui__full">
+            フル
+          </div>
+        </div>
+        <div class="mini-player-play-ui"></div>
+      </div>
+    </div>
     <meta content="initial-scale=1.0" id="viewport" name=
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
     "https://asset.booth.pm/assets/d0b74dab23351869d989.js" defer=
     "defer" nonce=
-    "K4l/59gKoRxl4kV/LEPY691DDyspkmbV8RlYJfbYqy8="></script>
+    "4IZ59oBzXSuGMpGoMfHY7VsjWz8rSsGjciGWylMDo48="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"可変点滅Shader","description":"□可変点滅Shader\n\nunity用の点滅の可変が可能なShaderです。\n読んで字の如く、Materialパラメータの調節によって点滅の速度やサイクル、輝度を変更出来る様になっています。\n\nサンプル動画→\nhttps://twitter.com/mabo_to_fu/status/1104020294224601090\n\n\n□使用方法\nunitypackageをインポート或いはShaderファイルを直接インポートして下さい。\nShaderを選択する際はShader一覧の中からap1895_Shadersを選択して下さい。\n\n\n\n□利用規約\n当ShaderはMITライセンスに基づいています。\n\n\n□連絡先\n\nTwitter： @mabo_to_fu\nメール： stanag2324@gmail.com\n\n\n□更新履歴\n\n2019/3/08：販売開始","url":"https://booth.pm/ja/items/1265805","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"}}
     </script>
     <link rel="shortcut icon" type="image/x-icon" href=
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
-    "apple-touch-icon-precomposed">
-  </head>
-  <body>
-    <noscript><iframe height="0" src=
-    "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
+    "apple-touch-icon-precomposed"><noscript><iframe height="0"
+    src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="K4l/59gKoRxl4kV/LEPY691DDyspkmbV8RlYJfbYqy8="></script>
+    nonce="4IZ59oBzXSuGMpGoMfHY7VsjWz8rSsGjciGWylMDo48="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
